-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.3
-
-
5e566ab373 (qt/qtbase/dev) 7a8315bf27 (qt/qtbase/6.2) 7a8315bf27 (qt/tqtc-qtbase/6.2) 5e566ab373 (qt/tqtc-qtbase/dev) eb52c31c5b (qt/qtbase/6.3) eb52c31c5b (qt/tqtc-qtbase/6.3) eb52c31c5b (qt/tqtc-qtbase/6.3.0)
Hello,
with the Update to Qt 6.2.3 we discovered random crashes in QGraphicsScene.
This crashes are happening in combination with the QGraphicsItem selected flag.
We do not use the selected flag directly in our Graphics Items. Every time a selection changes for an item we create a new GraphicsItem which only paints the selected border.
I have attached an example Application.
Crash in QGraphicsScene::clearSelection()
1. Open the example Application
2. Select any GraphicsItem in the Scene
3. Select the other GraphicsItem in the Scene --> Crash
Crash in QGraphicsSceneFindItemBspTreeVisitor
1. In the class "CustomGraphicsItem" comment out line 38
2. Use instead line 40 for calling "notifySelectionActor"
3. With this workaround the first crash does not happen
4. Now select a GraphicsItem and move it around
5. Select the other GraphicsItem --> crash
Crash in QGraphicsScenePrivate::drawItem
1. In the class SceneSelectionActor comment out line 43 (scene()->selectedItems())
2. Select a GraphicsItem and move it around
3. Select the other GraphicsItem --> crash